feat: add JSpecify nullness annotations